--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -56,3 +56,24 @@ jobs:
           name: florr_auto_afk_lite_macos
           path: florr_auto_afk_lite_macos.zip
           retention-days: 90
+
+      - name: Create git tag (on push)
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          TAG_NAME="v1.0.0-${{ github.run_number }}"
+          git tag $TAG_NAME ${{ github.sha }}
+          git push origin $TAG_NAME
+
+      - name: Upload Executable to Release (on push)
+        if: ${{ github.event_name == 'push' }}
+        uses: softprops/action-gh-release@v1
+        with:
+          files: florr_auto_afk_lite_macos.zip
+          name: macOS Build ${{ github.sha }}
+          body: 'Automated macOS build'
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
