--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -1,3 +1,5 @@
+name: Build macOS Executable
+
 on:
   push:
     branches: [ main ]
@@ -57,23 +59,19 @@ jobs:
           path: florr_auto_afk_lite_macos.zip
           retention-days: 90
 
-      - name: Create git tag (on push)
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          TAG_NAME="v1.0.0-${{ github.run_number }}"
-          git tag $TAG_NAME ${{ github.sha }}
-          git push origin $TAG_NAME
-
-      - name: Upload Executable to Release (on push)
+      - name: Create and Publish Release (on push)
         if: ${{ github.event_name == 'push' }}
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: v1.0.0-${{ github.run_number }}
+          name: macOS Build v1.0.0-${{ github.run_number }}
+          body: |
+            Automated macOS build
+            Commit SHA: ${{ github.sha }}
+            Run Number: ${{ github.run_number }}
           files: florr_auto_afk_lite_macos.zip
-          name: macOS Build ${{ github.sha }}
-          body: 'Automated macOS build'
           draft: false
           prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
