Update dependencies and improve README instructions
Replaced opencv-python with opencv-contrib-python and specified versions for scipy and scikit-image in requirements.txt. Updated README to reflect dependency changes and improved warning formatting for script installation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-opencv-python
-numpy
-scipy
+opencv-contrib-python
+scipy==1.15.3
 pyautogui
 torch
+rdp
 ultralytics
-scikit-image
+scikit-image==0.24.0
 fastapi
 uvicorn
-websockets
-pyinstaller
+numpy
+
+
