Update MacOS instructions and workflow config
Removed --windowed flag from PyInstaller in build workflow. Improved MacOS usage instructions in README, clarified dependency installation, and renamed run_macos.sh script to project root for easier access.

--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Create executable with PyInstaller
         run: |
-          python -m PyInstaller --onedir --windowed --name florr_auto_afk_lite main.py
+          python -m PyInstaller --onedir --name florr_auto_afk_lite main.py
 
       - name: Copy necessary files to dist directory
         run: |
